Ensured button text doesn't overflow during transition

--- a/styles.css
+++ b/styles.css
@@ -344,6 +344,11 @@ header {
   }
 }
 
+.global-header__signup-form button span {
+  display: block;
+  overflow: hidden;
+}
+
 .global-header__signup-form button svg {
   width: 16px;
 }
